# schemainspect

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
schemainspect/: command.py  get.py
schemainspect/pg/: obj.py
